src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Gross_TCV__c</fullName>
        <description>Renamed to EVA - JENGA-1540</description>
        <label>Gross EVA</label>
        <summarizedField>OpportunityLineItem.Gross_Program_TCV_Copy__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Gross_Total_Contract_Value_TCV__c</fullName>
        <description>Not Used - JENGA-1540</description>
        <formula>(Livongo_for_Diabetes_PwDs__c * 0.25 *  Livongo_for_Diabetes_PPPM__c * Livongo_for_Diabetes_Program_Term__c )
	+
	( Livongo_for_Hypertension_PwHs__c * 0.10 *  Livongo_for_Hypertension_PPPM__c *  Livongo_for_Hypertension_Program_Term__c )
	+
	IF(Livongo_for_Weight_Management_DP_PPPM__c == 1, 608 * (Livongo_for_Weight_Management_DP_PwOs__c * 0.10),
	( Livongo_for_Weight_Management_DP_PwOs__c * 0.10 *  Livongo_for_Weight_Management_DP_PPPM__c *  Livongo_for_WM_DP_Program_Term__c ))
	+
	IF(Livongo_DPP_PPPM__c == 1, 608 * (Livongo_DPP_PwPDs__c * 0.10),
	( Livongo_DPP_PwPDs__c * 0.10 *  Livongo_DPP_PPPM__c  * Livongo_DPP_Program_Term__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Gross Total Contract Value (TCV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HSS_Line_of_Business__c</fullName>
        <label>HSS Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Fully Insured</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Plan Employees</fullName>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasOpportunityLvlCompetitorRelationship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TRUE if there is an Opportunity Level Competitor Relationship. Populated by Relationship Management process builder.</description>
        <label>HasOpportunityLvlCompetitorRelationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incentive_Details__c</fullName>
        <label>Incentive Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incentive_Offered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incentive Offered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incremental_cost_of_Livongo_over_3_years__c</fullName>
        <formula>( Livongo_for_Diabetes_PPPM__c   -  Cost_of_diabetes_testing_supplies__c ) * 36</formula>
        <label>Incremental cost of Livongo over 3 years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_Livongo_Health_Plan_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Livongo Health Plan Rep</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>User.Alias</field>
                <operation>equals</operation>
                <value>mstur</value>
            </filterItems>
            <filterItems>
                <field>User.Alias</field>
                <operation>equals</operation>
                <value>jhelm</value>
            </filterItems>
            <filterItems>
                <field>User.Alias</field>
                <operation>equals</operation>
                <value>ciken</value>
            </filterItems>
            <filterItems>
                <field>User.Alias</field>
                <operation>equals</operation>
                <value>kcard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_this_account_a_Strategic_Account__c</fullName>
        <formula>Account.Is_this_account_a_Strategic_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is this account a Strategic Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_opportunity_a_pilot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this opportunity a pilot?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__Is_Influenced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity was influenced by activities on LinkedIn Sales Navigator</description>
        <label>Is_Influenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <label>Launch Date (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_Goals__c</fullName>
        <inlineHelpText>What percentage of enrollment are you/the client expecting? Are there other goals/programs/partners at play?</inlineHelpText>
        <label>Launch Goals</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail_Text__c</fullName>
        <label>Lead Source Detail Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Livongo_BH_Coaching_PPPM__c</fullName>
        <label>Livongo BH Coaching PMPM</label>
        <summarizedField>OpportunityLineItem.PMPM__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Livongo_Behavioral_Health_PwBHs__c</fullName>
        <label>Livongo Behavioral Health PwBHs</label>
        <summarizedField>OpportunityLineItem.Product_Participants__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.OpportunityProductName__c</field>
            <operation>contains</operation>
            <value>Livongo for Behavioral Health by myStrength</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Livongo_DPP_PPPM__c</fullName>
        <label>Livongo DPP PPPM</label>
        <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Livongo Diabetes Prevention Program</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Livongo_DPP_Program_Term__c</fullName>
        <label>Livongo DPP Program Term</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Livongo Diabetes Prevention Program</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Livongo_DPP_PwPDs__c</fullName>
        <label>Livongo DPP PwPDs</label>
        <summarizedField>OpportunityLineItem.Product_Participants__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Livongo DPP Powered by Retrofit, Livongo Diabetes Prevention Program, DP Solution</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Livongo_WM_PwWMs__c</fullName>
        <label>Livongo WM PwWMs</label>
        <summarizedField>OpportunityLineItem.Product_Participants__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Livongo Weight Management Powered by Retrofit</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Livongo_for_BH_PPPM__c</fullName>
        <label>Livongo for BH PPPM</label>
        <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.OpportunityProductName__c</field>
            <operation>contains</operation>
            <value>Behavioral Health</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.OpportunityProductName__c</field>
            <operation>notEqual</operation>
            <value>Coaching: Livongo for Behavioral Health by myStrength</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Livongo_for_Diabetes_Contract_Term__c</fullName>
        <label>Livongo for Diabetes Contract Term</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ListPrice</field>
            <operation>equals</operation>
            <value>75</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Livongo_for_Diabetes_PPPM__c</fullName>
        <label>Livongo for Diabetes PPPM</label>
        <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Livongo for Diabetes</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Livongo_for_Diabetes_Program_Term__c</fullName>
        <description>This is a roll-up summary of the opportunity program, program term field</description>
        <inlineHelpText>This is a roll-up summary of the opportunity program, program term field</inlineHelpText>
        <label>Livongo for Diabetes Program Term</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Livongo for Diabetes</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Livongo_for_Diabetes_PwDs__c</fullName>
        <label>Livongo for Diabetes PwDs</label>
        <summarizedField>OpportunityLineItem.Product_Participants__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Livongo for Diabetes, DM Solution</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Livongo_for_Hypertension_Contract_Term__c</fullName>
        <label>Livongo for Hypertension Contract Term</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ListPrice</field>
            <operation>equals</operation>
            <value>39</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Livongo_for_Hypertension_PPPM__c</fullName>
        <label>Livongo for Hypertension PPPM</label>
        <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Livongo for Hypertension</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Livongo_for_Hypertension_Program_Term__c</fullName>
        <description>This is a roll-up summary of the opportunity program, program term field</description>
        <inlineHelpText>This is a roll-up summary of the opportunity program, program term field</inlineHelpText>
        <label>Livongo for Hypertension Program Term</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Livongo for Hypertension</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Livongo_for_Hypertension_PwHs__c</fullName>
        <label>Livongo for Hypertension PwHs</label>
        <summarizedField>OpportunityLineItem.Product_Participants__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Livongo for Hypertension, CV Solution</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Livongo_for_WM_DP_Program_Term__c</fullName>
        <description>This is a roll-up summary of the opportunity program, program term field</description>
        <inlineHelpText>This is a roll-up summary of the opportunity program, program term field</inlineHelpText>
        <label>Livongo for WM Program Term</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Livongo for Weight Management</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Livongo_for_Weight_Management_DP_PPPM__c</fullName>
        <label>Livongo for Weight Management PPPM</label>
        <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Livongo for Weight Management</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Livongo_for_Weight_Management_DP_PwOs__c</fullName>
        <label>Livongo for Weight Management PwOs</label>
        <summarizedField>OpportunityLineItem.Product_Participants__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Livongo for Weight Management</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Executive Approval</fullName>
                </value>
                <value>
                    <fullName>No Budget</fullName>
                </value>
                <value>
                    <fullName>Key Contact Departure/Leadership Change</fullName>
                </value>
                <value>
                    <fullName>Company Acquired</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Other Competing Priorities</fullName>
                </value>
                <value>
                    <fullName>Rebate Issues</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Other (please specify in the opportunity update field)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSA__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>MSA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Approach_Details__c</fullName>
        <inlineHelpText>Provide key details around access to marketing, like if the client is committing to all marketing channels, thus will get the lapse clause? Are there any limitations we need to know of?</inlineHelpText>
        <label>Marketing Approach Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Channels__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <inlineHelpText>What marketing channels are available</inlineHelpText>
        <label>Marketing Channels</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Matching_Population_Type__c</fullName>
        <formula>IF( ContractId = &quot;&quot;, TRUE, IF( TEXT(Population_Type__c) =  TEXT(Contract.Population_Type__c) , TRUE, IF(ISBLANK(TEXT(Population_Type__c)) || ISBLANK(TEXT(Contract.Population_Type__c)), TRUE, FALSE)))</formula>
        <label>Matching Population Type?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migrated_myStrength_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated myStrength Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Revenue_MRR__c</fullName>
        <formula>(Livongo_for_Diabetes_PwDs__c * Livongo_for_Diabetes_PPPM__c * 0.25)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total # of PwDs covered by contract * $PPPM * 25%</inlineHelpText>
        <label>Monthly Recurring Revenue (MRR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_ARR__c</fullName>
        <description>Sum of all related Program ARRs</description>
        <label>Net ARR</label>
        <summarizedField>OpportunityLineItem.Program_ARR_Copy__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Net_TCV__c</fullName>
        <description>Sum of all related Net Program TCVs
Not Used - JENGA-1540</description>
        <label>Net TCV</label>
        <summarizedField>OpportunityLineItem.Net_Program_TCV_Copy__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Agreements__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>Non-Standard Agreements</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes_for_Contacts__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <inlineHelpText>Please provide background on the important contacts in the Sales process and any information that can help facilitate the transition to a relationship with the CI (ex: what are there communication preferences, name pronunciation, meeting preferences)</inlineHelpText>
        <label>Notes for Contacts</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_for_Contract_Executed_Dates__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>Notes for Contract Executed Dates</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Octiv_Template__c</fullName>
        <inlineHelpText>Select the template you want to use, then save the opportunity. After saving, hit the &quot;New Document&quot; button above</inlineHelpText>
        <label>Octiv Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BCBS MI Business Case</fullName>
                    <isActive>false</isActive>
                    <label>BCBS MI Business Case</label>
                </value>
                <value>
                    <fullName>BCBS MI Business Case v1.1</fullName>
                </value>
                <value>
                    <fullName>BCBS MI Business Case v1.2 w LauraWetli Signature</fullName>
                </value>
                <value>
                    <fullName>BH Only Template</fullName>
                </value>
                <value>
                    <fullName>Proposal Template</fullName>
                    <label>Diabetes + HTN + WM/DP + BH Proposal</label>
                </value>
                <value>
                    <fullName>Diabetes Only</fullName>
                    <label>Diabetes Only Proposal</label>
                </value>
                <value>
                    <fullName>HTN Only Proposal</fullName>
                </value>
                <value>
                    <fullName>Whole Person Proposal</fullName>
                </value>
                <value>
                    <fullName>DPP Only Template</fullName>
                    <label>WM/DP Only Template</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opp_Owner_Role__c</fullName>
        <formula>Owner.UserRole.Name</formula>
        <label>Opp Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Covered_Lives__c</fullName>
        <label>Opportunity Covered Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID_Long__c</fullName>
        <formula>Id 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1)</formula>
        <label>Opportunity ID Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Next_Step__c</fullName>
        <label>Opportunity Next Step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Update_Next_Step__c</fullName>
        <label>Opportunity Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Update__c</fullName>
        <label>Opportunity Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Original_Contract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is related only to Contract Path Change opportunities and is required for commissions to be tied between the original sale, the original contract, and the updated contract via a new path.</description>
        <inlineHelpText>This field is related only to Contract Path Change opportunities and is required for commissions to be tied between the original sale, the original contract, and the updated contract via a new path.</inlineHelpText>
        <label>Original Contract</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only associate Client Overview records to this Opportunity.</errorMessage>
            <filterItems>
                <field>Contract.RecordType.Name</field>
                <operation>equals</operation>
                <value>Client Overview</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunities (Original Contract)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Last_Stage_Update__c</fullName>
        <label>Last Stage Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Swaggable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Swaggable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PGs__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>PGs</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PO_WholePerson__c</fullName>
        <label>PO#_WholePerson</label>
        <summarizedField>OpportunityLineItem.PO_WholePerson__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Population_Type__c</fullName>
        <description>To be completed for clients on HSS contracts only or if your client is non-HSS but launching as downmarket.</description>
        <inlineHelpText>To be completed for clients on HSS contracts only or if your client is non-HSS but launching as downmarket.</inlineHelpText>
        <label>Population Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ASO downmarket</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Federal employee</fullName>
                </value>
                <value>
                    <fullName>Fully Insured</fullName>
                </value>
                <value>
                    <fullName>Group Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Health Plan Employee</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare/Medicaid Dual Eligible</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Medicare Fee for Service</fullName>
                </value>
                <value>
                    <fullName>Non – HSS downmarket</fullName>
                    <isActive>false</isActive>
                    <label>Non – HSS downmarket</label>
                </value>
                <value>
                    <fullName>Non-HSS Downmarket</fullName>
                </value>
                <value>
                    <fullName>Patient Population</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Power_of_1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Opps_PO1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreContractingBillingPaperLongID__c</fullName>
        <description>Captures the Account Long ID of PreContracting Billing Paper lookup</description>
        <formula>BillingPartner__r.Account_ID_Long__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PreContractingBillingPaperLongID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreContractingContractPaperLongID__c</fullName>
        <formula>Pre_Contracting_Contract_Paper__r.Account_ID_Long__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PreContractingContractPaperLongID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Contracting_Contract_Paper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales will populate this field during the sales cycle with expected Contract Paper for the Opportunity. Additionally, the Contract Path field is also required before an Opp can be closed won.</description>
        <inlineHelpText>Sales will populate this field during the sales cycle with expected Contract Paper for the Opportunity. Additionally, the Contract Path field is also required before an Opp can be closed won.</inlineHelpText>
        <label>Pre-Contracting Contract Paper</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Pre-Contracting Contract Paper)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Predicted_Total_3_yr_Cost_Savings_Scn_1__c</fullName>
        <formula>(ROUND(Estimated_Enrolled_Population__c,0))*2828</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Predicted Total 3-yr Cost Savings-Scn 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>